added notifications automatic generation throught jekyll, as well as moved some scripts in the head

--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -91,3 +91,6 @@
     })(document);
     smartlook('init', 'c819aa03296b0d5c2dc4209529c9f3971dfba4f8');
 </script>
+<script src="/Assets/js/scripts.js"></script>
+<!-- Cookieconsent must be called pretty early to avoid glitches -->
+<script src="/Assets/js/cookieconsent.js"></script>
