Humans.txt reference

--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -2,6 +2,8 @@
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link type="text/plain" rel="author" href="/humans.txt" />
+
 <meta content="{{page.description}}" name="description">
 <!-- Google Plus -->
 <!-- Update your html tag to include the itemscope and itemtype attributes. -->
