added loadbar on page transition

--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -61,7 +61,6 @@
 <meta name="msapplication-TileImage" content="/Assets/favicon/mstile-144x144.png">
 <meta name="msapplication-config" content="/Assets/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-
 <!-- Push notifications -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
 <script>
@@ -77,7 +76,7 @@
 </script>
 
 <!-- Smartlook -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
     window.smartlook || (function(d) {
         var o = smartlook = function() {
                 o.api.push(arguments)
@@ -92,7 +91,7 @@
         s.parentNode.insertBefore(c, s);
     })(document);
     smartlook('init', 'c819aa03296b0d5c2dc4209529c9f3971dfba4f8');
-</script>
+</script>-->
 <script src="/Assets/js/scripts.js"></script>
 <!-- Cookieconsent must be called pretty early to avoid glitches -->
 <script src="/Assets/js/cookieconsent.js"></script>
