--- a/Websites/fermiumlabs_com/_includes/cookieconsent.html
+++ b/Websites/fermiumlabs_com/_includes/cookieconsent.html
@@ -3,7 +3,7 @@
   <div class="row">
    <div class="col-sm-12 overflow-hidden">
     <i class="ti-info-alt icon icon-sm pull-left color-primary"></i>
-    <p class="mb0 pull-left">Hey there, User! Our site uses cookies and by continuing to browse, You're agreeing to our <a class="cookie-link" href="/cookie-policy/">terms of service</a></p>
+    <p class="mb0 pull-left">Hey there! Our site uses cookies and by continuing to browse, You're agreeing to our <a class="cookie-link" href="/cookie-policy/">terms of service</a></p>
    </div>
   </div>
  </div>
