about-us text changed, added git icon to footer

--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -35,6 +35,7 @@
 					<li><a class="hvr-grow"  href="https://www.facebook.com/fermiumlabs" target="_blank"><i class="ti-facebook"></i></a></li>
 					<li><a class="hvr-grow" href="https://www.linkedin.com/company/fermium-labs" data-proofer-ignore target="_blank"><i class="ti ti-linkedin"></i></a></li>
 					<li><a class="hvr-grow" href="https://www.instagram.com/fermiumlabs/" target="_blank"><i class="ti-instagram"></i></a></li>
+					<li><a class="hvr-grow" href="https://github.com/fermiumlabs" target="_blank"><i class="ti-github"></i></a></li>
 				</ul>
 			</div>
 		</div>
