--- a/Websites/fermiumlabs_com/Assets/sass/custom.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/custom.scss
@@ -352,32 +352,32 @@ video {
 	border-radius:50%;
 }
 .not-in-office{
-	background: red;
+  background-color: rgba(255, 0, 0, 0.2);
+  background: rgba(255, 0, 0, 0.2);
+//  color: rgba(255, 0, 0, 0.2);
 }
 .in-office{
-	background: green;
+  background-color: rgba(0, 255, 0, 0.2);
+background: rgba(0, 255, 0, 0.2);
+//color: rgba(0, 255, 0, 0.2);
 }
 
 .office{
 	margin-bottom:0;
-}
-.img-circle {
-	width:100px;
-	height:100px;
-    border-radius: 50%;
-	display:inline-block;
-	position:absolute;
 }
 
 .overlay-status{
 		width:100px;
 	height:100px;
     border-radius: 50%;
-	display:inline-block;
-	opacity:0.2;
+    line-height: 100px;
+    font-size: 3em;
 	float:none;
-	display:block;
+  color: rgba(0,0,0,0.5);
+	display:inline-block;
+  z-index: 999;
 }
+
 @media all and (max-width: 768px){
 .flex{
 	display:flex;
