--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -28,10 +28,16 @@
 
 
 <meta name="theme-color" content="#eb274a">
+
 <link href="/Assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
 <link href="/Assets/css/main.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" media="none" onload="if(media!='all')media='all'">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" media="none" onload="if(media!='all')media='all'">
+
+<!--
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' async>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" async>
+-->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
