--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -34,13 +34,13 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" media="none" onload="if(media!='all')media='all'">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" media="none" onload="if(media!='all')media='all'">
 
-<!--
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' async>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" async>
--->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+
+<script src="/Assets/js/scripts.js" async></script>
+<!-- Cookieconsent must be called pretty early to avoid glitches -->
+<script src="/Assets/js/cookieconsent.js" async></script>
 
 <!--NOTIFICATIONS AND FAVICON-->
 <link rel="manifest" href="https://fermiumlabs.com/manifest.json">
@@ -98,6 +98,3 @@
     })(document);
     smartlook('init', 'c819aa03296b0d5c2dc4209529c9f3971dfba4f8');
 </script>-->
-<script src="/Assets/js/scripts.js"></script>
-<!-- Cookieconsent must be called pretty early to avoid glitches -->
-<script src="/Assets/js/cookieconsent.js"></script>
