--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer-2 bg-fl pt96 pt-xs-40">
-
+<footer class="footer-2 bg-fl pt24 pt-xs-24">
+<!--	{% include twitter.html %}-->
 	<div class="container">
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
