--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -313,7 +313,7 @@ ul.lead li{ font-size: 16px; line-height: 40px; }
 .color-body{ color: #666; }
 .color-primary{ color: @color-primary !important; }
 .color-red{ color: @red !important; }
-.color-white{ color: #fff; }
+.color-white{ color: #fff !important; }
 
 
 /*!---------- 5. SECTIONS ----------*/
