--- a/Websites/fermiumlabs_com/_includes/scripts.html
+++ b/Websites/fermiumlabs_com/_includes/scripts.html
@@ -2,6 +2,8 @@
 <script src="/Assets/js/flexslider.min.js"></script>
 <script src="/Assets/js/parallax.js"></script>
 <script src="/Assets/js/custom.js"></script>
+<script src="/Assets/js/moment.min.js"></script>
+<script src="/Assets/js/twitterfetcher.min.js"></script>
 
 <script>
 	window.addEventListener("beforeunload", function() {
