--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -14,8 +14,11 @@
 						</svg>
 					</a>
 				</div>
+
 				<div class="module widget-handle offscreen-toggle right">
 					<i class="ti-menu"></i>
+				</div>
+				<div class="module right spotify marquee hidden-xs hidden-sm">
 				</div>
 			</div>
 			<div class="offscreen-container bg-dark text-center">
