Added icons and images to houston page

--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -598,7 +598,7 @@ nav.nav-centered.outOfSight .logo{ display: none; }
 
 /*!---------- 10. ICONS ----------*/
 
-.icon{ font-size: 64px; display: inline-block; color: @bg-dark ; }
+.icon{ font-size: 64px !important; display: inline-block; color: @bg-dark ; }
 .image-bg.bg-light .icon{ color: @bg-dark; }
 .image-bg .icon, .bg-dark .icon{ color: #fff; }
 .icon-lg{ font-size: 80px; }
