--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -33,7 +33,7 @@
 <link href="/Assets/css/main.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" media="none" onload="if(media!='all')media='all'">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" media="none" onload="if(media!='all')media='all'">
-
+<script src="https://use.fontawesome.com/11dcf3a53d.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
