disable spotify and instagram

--- a/Websites/fermiumlabs_com/_includes/scripts.html
+++ b/Websites/fermiumlabs_com/_includes/scripts.html
@@ -4,7 +4,7 @@
 <script src="/Assets/js/custom.js"></script>
 <script src="/Assets/js/moment.min.js"></script>
 <script src="/Assets/js/twitterfetcher.min.js"></script>
-<script src="/Assets/js/spotify.js"></script>
+<!-- <script src="/Assets/js/spotify.js"></script> -->
 <script>
 	window.addEventListener("beforeunload", function() {
 		document.body.classList.add("animate-out");
