play only the last 2 tweets

--- a/Websites/fermiumlabs_com/_includes/twitter.html
+++ b/Websites/fermiumlabs_com/_includes/twitter.html
@@ -5,7 +5,7 @@
         <i class="ti-twitter-alt icon color-white opac6 vcenter"></i>
       </div>
       <div class="col col-md-10  col-sm-10 twitter-feed tweets-slider  vcenter ztop">
-        <div class="tweets-feed " data-feed-name="fermiumlabs">
+        <div class="tweets-feed " data-feed-name="fermiumlabs" data-amount="2">
         </div>
       </div>
     </div>
