--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -625,7 +625,7 @@ input[type="text"],button,textarea,select,input[type="password"]{ -webkit-appear
 
 .input-with-label span{ font-family: @heading-font,"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 11px; text-transform: uppercase; color: @bg-dark; letter-spacing: 1px; font-weight: 700; display: block; cursor: default; }
 
-input[type="text"],input[type="password"]{ background: #f5f5f5; border: none; width: 100%; height: 50px; padding-left: 20px; font-weight: 500; margin-bottom: 24px; border-radius: 0; }
+input[type="text"],input[type="email"],input[type="password"]{ background: #f5f5f5; border: none; width: 100%; height: 50px; padding-left: 20px; font-weight: 500; margin-bottom: 24px; border-radius: 0; }
 .image-bg input[type="text"], .image-bg textarea{ color: #555; }
 .image-bg.bg-light input.transparent, .image-bg.bg-light button.transparent{ border-color: @bg-dark; }
 input.transparent, button.transparent{ background: none; border: 1px solid rgba(255,255,255,.5); color: #fff !important	; }
