--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -1,46 +1,59 @@
 <div id="top" class="nav-container">
-
-
-
-	<nav class="absolute {% if page.menu %}{{ page.menu | escape }}{% else %}{{ 'transparent' | escape }}{% endif %}">
-			<div class="nav-bar">
-				<div class="module left">
-					<a href="/">
-						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
-							<image xlink:href="/Assets/img/logos/text-only-white.svg" width="100%" height="100%"/>
-						</svg>
-						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-dark">
-							<image xlink:href="/Assets/img/logos/text-only.svg" width="100%" height="100%"/>
-						</svg>
-					</a>
-				</div>
-
-				<div class="module widget-handle offscreen-toggle right">
-					<i class="ti-menu"></i>
-				</div>
-				<div class="module right spotify marquee hidden-xs hidden-sm">
-				</div>
-			</div>
-			<div class="offscreen-container bg-dark text-center">
-				<div class="close-nav">
-					<a href="#">
-						<i class="ti-close"></i>
-					</a>
-				</div>
-				<div class="v-align-transform text-center">
-					<a href="#">
-						<svg style="width:100%; height:auto;max-height:200px" preserveAspectRatio="xMidYMid meet"  class="image-xs mb40 mb-xs-24">
-							<image xlink:href="/Assets/img/logos/atom-white.svg" width="100%" height="100%"/>
-						</svg>
-					</a>
-					<ul class="mb40 mb-xs-24">
-						<li class="fade-on-hover hvr-grow"><a href="/"><h5 class="uppercase mb8">Home</h5></a></li>
-						<li class="fade-on-hover hvr-grow"><a href="/about-us/"><h5 class="uppercase mb8">About Us</h5></a></li>
-						<li class="fade-on-hover hvr-grow"><a href="/contact-us/"><h5 class="uppercase mb8">Contacts</h5></a></li>
-					</ul>
-
-				</div>
-			</div>
-		</nav>
-
-</div>
+    
+    
+    
+        <nav class="absolute {% if page.menu %}{{ page.menu | escape }}{% else %}{{ 'transparent' | escape }}{% endif %}">
+                              <div class="nav-bar">
+                                <div class="module left">
+                                    <a href="/">
+                                        <svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
+                                            <image xlink:href="/Assets/img/logos/text-only-white.svg" width="100%" height="100%"/>
+                                        </svg>
+                                        <svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-dark">
+                                            <image xlink:href="/Assets/img/logos/text-only.svg" width="100%" height="100%"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                        <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
+                            <i class="ti-menu"></i>
+                        </div>
+                        <div class="module-group right">
+                            <div class="module left">
+                                
+                                <ul class="menu">
+                                        <li class="has-dropdown">
+                                                <a href="#">
+                                                    Products
+                                                </a>
+                                                <ul class="mega-menu">
+                                                    {% for category in site.data.products %}
+                                                    <li>
+                                                        <ul>
+                                                            <li>
+                                                                <span class="title">{{category.tag}}</span>
+                                                            </li>
+                                                            {% for product in category.products %}
+                                                            <li>
+                                                                    <a href="{{product.link}}">{{product.name}}</a>
+                                                                </li>
+                                                            {% endfor %}
+                                                        </ul>
+                                                    </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            </li>
+                                    <li>
+                                        <a href="/about-us/">About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="/contact-us/">Contact Us</a>
+                                    </li>
+                                    
+                                </ul>
+                            </div>
+                        </div> 
+                    </div>
+                </nav>
+    
+    </div>
+    
