--- a/Websites/fermiumlabs_com/Assets/sass/custom.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/custom.scss
@@ -112,7 +112,7 @@
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	cursor: text;
+	cursor: pointer;
 	-webkit-transform-origin: 0% 50%;
 	transform-origin: 0% 50%;
 	-webkit-transition: -webkit-transform 0.5s;
@@ -151,15 +151,6 @@
 	}
 }
 
-
-.row.is-flex {
-  display: flex;
-  flex-wrap: wrap;
-}
-.row.is-flex > [class*='col-'] {
-  display: flex;
-  flex-direction: column;
-}
 
 /*
 * And with max cross-browser enabled.
