--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -36,6 +36,7 @@
 <script src="https://use.fontawesome.com/11dcf3a53d.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 
 <script src="/Assets/js/scripts.js" async></script>
 <!-- Cookieconsent must be called pretty early to avoid glitches -->
@@ -66,7 +67,19 @@
 <meta name="msapplication-TileImage" content="/Assets/favicon/mstile-144x144.png">
 <meta name="msapplication-config" content="/Assets/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-
+<!-- Push notifications -->
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+<script>
+    var OneSignal = OneSignal || [];
+    OneSignal.push(["init", {
+        appId: "81205fef-6421-44c9-a579-6fe66f4451b4",
+        autoRegister: true,
+        safari_web_id: "web.onesignal.auto.10d6980b-bbad-483e-b993-08fa2a289dd8",
+        notifyButton: {
+            enable: false /* Set to false to hide */
+        }
+    }]);
+</script>
 
 <!-- Smartlook -->
 <!--<script type="text/javascript">
