--- a/Websites/fermiumlabs_com/Assets/sass/custom.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/custom.scss
@@ -5,7 +5,10 @@
 3. Other stuff
 4. Animations
 **/
-
+.bg-logger{ 
+  background-color:#087CA7; 
+  color: #FFFFFF; 
+} 
 .input {
 	position: relative;
 	z-index: 1;
